dei uma mensagem de oi

--- a/pgina-de-teste-1.html
+++ b/pgina-de-teste-1.html
@@ -58,10 +58,10 @@
          <parte-direita>
             <item>Cabana-App</item>
             <item>Cardápio</item>
-            <item>Item-3</item>
-            <item>Item-4</item>
-            <item>Item-5</item>
-            <item>Item-6</item>
+            <item>Restaurantes</item>
+            <item>Seja um Franqueado</item>
+            <item>Vagas</item>
+            <item>Contato</item>
          </parte-direita>
       </header>
 
